🔧 Fix: Correct Vercel build command for monorepo
- Simplify build command to just 'cd apps/web && npm run build'
- Remove redundant directory navigation in vercel.json
- SPA routing rules remain intact for client-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd apps/web && npm run build && cd ../..",
+  "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/dist",
   "devCommand": "cd apps/web && npm run dev",
   "rewrites": [
