🔧 Fix: Simplify Vercel monorepo configuration
- Remove cd commands from build process
- Set output directory to 'dist' for Vite
- Allow Vercel to run from correct working directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd apps/web && npm run build",
-  "outputDirectory": "apps/web/dist",
-  "devCommand": "cd apps/web && npm run dev",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
