Fix Vercel monorepo deployment with rootDirectory
- Set rootDirectory to apps/web for proper monorepo handling
- Remove cd commands from install/build scripts
- Adjust outputDirectory path accordingly

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "installCommand": "cd apps/web && npm install",
-  "buildCommand": "cd apps/web && npm run build",
-  "outputDirectory": "apps/web/dist",
+  "rootDirectory": "apps/web",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
