Fix Vercel config for monorepo with install/build commands
- Use installCommand and buildCommand with cd to apps/web
- Set outputDirectory to apps/web/dist
- Remove unsupported rootDirectory property

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "rootDirectory": "apps/web",
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "installCommand": "cd apps/web && npm install",
+  "buildCommand": "cd apps/web && npm run build",
+  "outputDirectory": "apps/web/dist",
   "rewrites": [
     {
       "source": "/(.*)",
