--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "installCommand": "cd apps/web && npm install",
   "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/dist",
+  "installCommand": "cd apps/web && npm install",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
