--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd apps/web && npm run build",
+  "buildCommand": "cd apps/web && npx tsc --noEmit && npx vite build",
   "outputDirectory": "apps/web/dist",
   "installCommand": "cd apps/web && npm install",
   "framework": "vite",
