--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vercel-build": "npm run build",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "@types/nodemailer": "^6.4.17",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
