Fix monorepo Vercel configuration
- Move vercel.json from root to apps/web/vercel.json
- Simplify web app vercel.json to SPA rewrites only
- Create .vercelignore to prevent scanning apps/web during backend deploys
- Remove root vercel.json to avoid conflicts

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -25,5 +25,5 @@
     "exactOptionalPropertyTypes": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "api"]
+  "exclude": ["node_modules", "dist"]
 }
