Final Vercel monorepo separation and serverless config
- Frontend apps/web/vercel.json: Clean Vite SPA config with schema
- Backend apps/backend/vercel.json: Serverless API with Node 20.x functions
- No root vercel.json, all configs isolated per project
- Backend already serverless-friendly with conditional listen and api handler

--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,8 +1,10 @@
 {
-  "outputDirectory": ".",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": null,
   "functions": {
     "api/*.ts": {
-      "runtime": "nodejs22.x"
+      "runtime": "nodejs20.x",
+      "maxDuration": 10
     }
   }
 }
