--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -2,9 +2,8 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": null,
   "functions": {
-    "api/*.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 10
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
     }
   }
 }
